v.0.1.5

- add_header() & remove_header() functions, to set http headers


v.0.1.4

- better handling of querying multiple link-previews
- webp support for link-preview images
- better link detection
- link preview refreshing without js is now disabled by default
- link preview: insert refreshed link info automatically, if link preview is below viewport
- get_config() helper function
- bugfixes & enhancements


v.0.1.3

- permission bugfix for the content folder and new posts on some hosts
- transparent png files are handled correctly, when the 'image_jpg_to_png' option is set to false (if it is set to true, which is the default, png images get converted to jpg and loose their transparency)
- you can set a background color for transparent images, when the 'image_jpg_to_png' option is set to true (which is the default); defaults to white background color
- https://www.example.com and http://www.example.com are now seen as the same user
- setup: add comments to .htaccess, at beginning and end of our block
- bugfixes & enhancements


v.0.1.2

- updater: fix for displaying relevant release information
- css & js files: start URL with '//' (instead of 'https://' or 'http://') to avoid mixed content
- don't delete .htaccess file on update
- bugfixes and enhancements


v.0.1.1

- updater: allow updating to the current (unstable) dev release
- compatibility with the homestead updater
- bugfixes and enhancements


v.0.1.0

**if you use a custom theme with snippets, you need to update all snippets**

this is the first beta release.

- renamed global $eigenheim to $core for better compatibility between modules (you need to update all snippets in a custom theme though)
- moved some functions and classes into a _shared folder, for simpler sharing between modules
- system config.php moved from system/site/config.php to system/config.php
- updater fix
- database_entry class as wrapper for file class
- bugfixes & enhancements
- compatibility with the homestead installer


alpha.18